# wtfutil

./: .gitignore  AGENTS.md  API_REFERENCE.md  MANIFEST.in  README.md  README_zh.md  context7.json  publish.py  pyproject.toml  ruff.toml  setup.py  test.py  wtfconfig.ini.example
.cursor/rules/: wtfutil-overview.mdc
docs/: README.md
docs/en/: fileutil.md  httputil.md  imgutil.md  notifyutil.md  procutil.md  pykill.md  singleinstance.md  sqlutil.md  strutil.md  translateutil.md  util.md
docs/zh/: fileutil.md  httputil.md  imgutil.md  notifyutil.md  procutil.md  pykill.md  singleinstance.md  sqlutil.md  strutil.md  translateutil.md  util.md
wtfutil/: __init__.py  _base.py  fileutil.py  httputil.py  imgutil.py  notifyutil.py  procutil.py  pykill.py  singleinstance.py  sqlutil.py  strutil.py  translateutil.py  util.py
