[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wtfutil"
version = "1.2.19"
description = "A Python utility library for everyday scripting and automation."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [
    { name = "vicrack", email = "18179821+ViCrack@users.noreply.github.com" },
]
keywords = ["utility", "http", "automation", "notify", "file", "crypto"]
classifiers = [
    "Topic :: Utilities",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "pymysql",
    "faker",
    "fake_useragent",
    "configobj",
    "requests",
    "urllib3",
    "requests_cache",
    "requests-toolbelt",
    "tldextract",
    "dnspython",
    "ratelimit",
    "rich",
    "pycryptodome",
    "portalocker",
    "psutil",
    "questionary",
    "pywin32; platform_system == 'Windows'",
]

[project.urls]
Homepage = "https://github.com/vicrack/wtfutil"
Repository = "https://github.com/vicrack/wtfutil"

[project.scripts]
pykill = "wtfutil.pykill:main"

[tool.setuptools.packages.find]
include = ["wtfutil*"]
